# bymr-desktop-launcher

./: .gitignore  README.md  auto-install-dmg.sh  components.json  package-lock.json  package.json  postcss.config.cjs  release.sh  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 0.jpDOw31R.css  _layout.1kK1WdFF.css
.svelte-kit/output/client/_app/immutable/chunks/: entry.Crvd8aMT.js
.svelte-kit/output/client/_app/immutable/entry/: app.CNdYrHpg.js  start.BPZgr3Bw.js
.svelte-kit/output/client/_app/immutable/nodes/: 1.cMekOHcl.js  2.Bj3gEDKU.js
.svelte-kit/output/prerendered/pages/: index.html
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: index.js  internal.js  ssr.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
scripts/: sign-android-apk.ps1
src/: app.css  app.html  app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_manager.rs  lib.rs  main.rs  networking.rs  runtime_extraction.rs  version_manager.rs
src/assets/svgs/: Discord.svelte  Github.svelte  Loader.svelte
src/lib/: enums.ts  globals.ts  utils.ts
src/lib/components/: AlertDialog.svelte  DebugLogs.svelte  Footer.svelte  Form.svelte  Loader.svelte  Navbar.svelte  Titlebar.svelte  Toast.svelte
src/lib/components/svgs/: Loader.svelte
src/lib/components/ui/button/: PrimaryButton.svelte  button.svelte  index.js  index.ts
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-portal.svelte  dialog-title.svelte  index.js  index.ts
src/lib/components/ui/form/: Form.svelte  invokeApiRequest.ts  validation.ts
src/lib/components/ui/input/: index.js  input.svelte
src/lib/components/ui/label/: index.js  label.svelte
src/lib/components/ui/select/: index.js  select-content.svelte  select-item.svelte  select-label.svelte  select-separator.svelte  select-trigger.svelte
src/lib/components/ui/tabs/: TabItem.svelte  TabSwitcher.svelte  TabView.svelte
src/lib/components/ui/tooltip/: Tooltip.svelte
src/lib/enums/: Builds.ts  Method.ts  Platform.ts  Protocol.ts  StatusCodes.ts
src/lib/errors/: errorMessages.ts
src/lib/stores/: buildStore.ts  debugLogStore.ts  launchStore.ts  loadState.ts  userStore.ts
src/lib/utils/: getAvailableLanguages.ts  invokeApiRequest.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/attacklogs/: +page.svelte
src/routes/leaderboards/: +page.svelte
src/routes/local/: +page.svelte
src/routes/login/: +page.svelte
src/routes/logs/: +page.svelte
src/routes/minigame/: +page.svelte
