[package]
name = "bym-refitted-launcher"
version = "0.3.0"
description = "The Backyard Monsters Refitted Launcher"
authors = ["Backyard Monsters Refitted team"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
tauri = { version = "2.5.1", features = ["devtools"] }
tokio = { version = "1.44.2", features = ["io-util", "fs"] }
tauri-plugin-http = "2.4.3"
tauri-plugin-process = "2.2.1"
tauri-bundler = "2.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.7.1"
