[package]
name = "bym-refitted-launcher"
version = "0.3.7"
description = "The Backyard Monsters Refitted Launcher"
authors = ["Backyard Monsters Refitted team"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
tauri = { version = "2.10.3", features = ["devtools"] }
tokio = { version = "1.51.0", features = ["io-util", "fs"] }
tauri-plugin-http = "2.5.7"
tauri-plugin-process = "2.3.1"
tauri-plugin-os = "2.3.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10.0"
